# hyperauto-parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  browser.py  card_parser.py  check_browser.py  config.py  cookies.json  docker-compose.yml  docs.md  error_handler.py  exceptions.py  health_check.py  instructions.txt  main.py  models.py  parser.py  pyproject.toml  renew.sh  requirements.txt  test.py  utils.py  товары.xlsx  цены_гиперавто_20260313_1402.xlsx  цены_гиперавто_20260313_1404.xlsx  цены_гиперавто_20260313_1405.xlsx
tests/: conftest.py  test_error_handler.py  test_health_check.py  test_models.py  test_parser.py
